# mixpanel_data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INFRA_COST_ANALYSIS.md  LICENSE  QA_PostMortem_Report_MCP_Server.docx  QA_PostMortem_Report_MCP_Server.md  README.md  RELEASE_NOTES_0.4.0.md  justfile  mkdocs.yml  pyproject.toml  user_context.jql
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/commands/: add-mutation-testing.md
.claude/hooks/: pre-commit-lint.sh  validate-python-commands.sh
.claude/scripts/: session-start.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codex-review.yml  codex.yml  copilot-setup-steps.yml  docs.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-triage.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
context/: 042-auth-architecture-redesign-handoff.md  BACKPORT-PLAN.md  CLAUDE.md  RUST_PARITY_GAP_ANALYSIS.md  auth-architecture-redesign.md  auth-project-workspace-redesign.md  behavior-properties-in-queries-design.md  cohort-behaviors-design.md  cowork-bundling-feasibility.md  custom-events-properties-query-integration.md  custom-properties-in-queries-design.md  flows-deep-dive-report.md  hybrid-pydantic-validation-refactor.md  introspection-feature-proposal.md  introspection-research.md  mixpanalyst.md  mixpanel-data-model-reference.md  mixpanel-http-api-specification.md  mixpanel_data-api-specification.md  mixpanel_data-design.md  mixpanel_data-project-brief.md  mp-cli-project-spec.md  query-user-design.md  source-aware-plugin-design.md  unified-bookmark-query-design.md  unified-query-engine-audit-report.md  unified-query-one-pager.md  unified-query-system-brief.md
context/Skills/: CLAUDE.md  (+7 more)
docs/: 004a-discovery-enhancements.md  CLAUDE.md  getting-started-guide.md  index.md  insights-query-api-design.md  insights-query-research.md  mixpanel-data-api-specification.md  mixpanel-data-design.md  mixpanel-data-project-brief.md  mixpanel-query-expression-language.md  mixpanel_data-api-specification.md  mixpanel_data-design.md  mixpanel_data-project-brief.md  mp-cli-api-specification.md  mp-cli-project-spec.md  quickstart-claude-code.md  quickstart-claude-cowork.md
examples/: cross_project.py  jql_df_improvements_demo.py
mixpanel-plugin/: .gitignore  DASHBOARD_PLAN.md  DISTRIBUTION.md  README.md  RELEASE-CHECKLIST.md
mp-mcp-server/: README.md  pyproject.toml
mp-mcp-server/src/mp_mcp_server/: cli.py  context.py  errors.py  server.py
mp-mcp-server/src/mp_mcp_server/middleware/: __init__.py  rate_limiting.py
mp-mcp-server/src/mp_mcp_server/tools/: discovery.py  fetch.py  live_query.py  local.py
mp-mcp-server/src/mp_mcp_server/tools/composed/: cohort.py  dashboard.py
mp-mcp-server/tests/: conftest.py
mp-mcp-server/tests/unit/: test_cli.py  test_context.py  test_errors.py  test_middleware_rate_limiting.py  test_prompts.py  test_tools_composed.py  test_tools_discovery.py  test_tools_fetch.py  test_tools_intelligent.py  test_tools_interactive.py  test_tools_live_query.py  test_tools_local.py
mp_mcp/: QA_TEST_TRACK.md  README.md  claude_desktop_config.json  pyproject.toml
mp_mcp/src/mp_mcp/: __init__.py  cli.py  context.py  errors.py  prompts.py  resources.py  server.py  types.py
mp_mcp/src/mp_mcp/middleware/: __init__.py  audit.py  caching.py  rate_limiting.py
mp_mcp/src/mp_mcp/tools/: __init__.py  discovery.py  fetch.py  live_query.py  local.py
mp_mcp/src/mp_mcp/tools/composed/: __init__.py  cohort.py  dashboard.py  gqm.py
mp_mcp/src/mp_mcp/tools/intelligent/: __init__.py  ask.py  diagnose.py  funnel_report.py
mp_mcp/src/mp_mcp/tools/interactive/: __init__.py  guided.py  safe_fetch.py
mp_mcp/src/mp_mcp/tools/workflows/: __init__.py  context.py  health.py  helpers.py  investigate.py  report.py  scan.py
mp_mcp/tests/: __init__.py  conftest.py
mp_mcp/tests/integration/: __init__.py  test_server_integration.py
mp_mcp/tests/unit/: __init__.py  test_cli.py  test_context.py  test_errors.py  test_middleware_audit.py  test_middleware_rate_limiting.py  test_prompts.py  test_resources.py  test_resources_dynamic.py  test_server.py  test_skills_provider.py  test_tools_composed.py  test_tools_discovery.py  test_tools_fetch.py  test_tools_intelligent.py  test_tools_interactive.py  test_tools_live_query.py  test_tools_local.py  test_tools_workflows_context.py  test_tools_workflows_health.py  test_tools_workflows_investigate.py  test_tools_workflows_report.py  test_tools_workflows_scan.py  test_types.py
scripts/: capture_bookmark_corpus.py  qa_jql.py  qa_workspace.py  schema_docs.py  test_bookmarks_api.py  validate_corpus.py
tests/: __init__.py  conftest.py  test_api_client_engage_stats.py  test_build_cohort_params.py  test_build_funnel_params.py  test_build_retention_params.py  test_cohort_behaviors_pbt.py  test_cohort_definition_pbt.py  test_custom_property_builders.py  test_custom_property_pbt.py  test_custom_property_query.py  test_custom_property_types.py  test_query_user_edge_cases.py  test_query_user_structural.py  test_transform_funnel.py  test_transform_retention.py  test_types_cohort_behaviors.py  test_types_flow.py  test_types_flow_pbt.py  test_types_flow_tree.py  test_types_flow_tree_pbt.py  test_types_funnel.py  test_types_funnel_pbt.py  test_types_retention.py  test_types_retention_pbt.py  test_types_user_query_result.py  test_user_builders.py  test_user_query_pbt.py  test_user_validators.py  test_validation_bypass.py  test_validation_bypass_r2.py  test_validation_cohort.py  test_validation_flow.py  test_validation_funnel.py  test_validation_retention.py  test_workspace_build_user_params.py  test_workspace_cohort.py  test_workspace_funnel.py  test_workspace_query_user.py  test_workspace_query_user_aggregate.py  (+3 more)
(+889 files in other folders)
