[project]
name = "mp-mcp-server"
version = "0.1.0"
description = "MCP server exposing mixpanel_data analytics capabilities to AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jared McFarland", email = "jared@mixpanel.com" }
]
keywords = ["mixpanel", "analytics", "mcp", "ai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=2.0,<3",
    "mixpanel_data",
]

[tool.uv.sources]
mixpanel_data = { path = ".." }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
mp-mcp-server = "mp_mcp_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mp_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# RateLimitedWorkspace proxy returns Any for proxied methods
# This is intentional for the proxy pattern used to apply rate limiting
[[tool.mypy.overrides]]
module = [
    "mp_mcp_server.tools.local",
    "mp_mcp_server.tools.live_query",
    "mp_mcp_server.tools.fetch",
    "mp_mcp_server.tools.discovery",
    "mp_mcp_server.tools.intelligent.ask",
    "mp_mcp_server.resources",
]
warn_return_any = false

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "D",   # pydocstyle
    "ANN", # flake8-annotations
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D107",   # missing docstring in __init__
]

[tool.ruff.lint.isort]
known-first-party = ["mp_mcp_server", "mixpanel_data"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["src/mp_mcp_server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
